// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.std.secrets;

option go_package = "namespacelabs.dev/foundation/std/secrets";

import "std/proto/options.proto";
import "std/types/invocation.proto";

message Secrets {
    repeated Secret secret = 1;
}

message Secret {
    reserved 2;

    string name = 1;
    // If specified, a secret is generated according to the specification, rather than being user-specified.
    GenerateSpecification                   generate        = 3 [(foundation.std.proto.provision_only) = true];
    foundation.std.types.DeferredInvocation initialize_with = 4 [(foundation.std.proto.provision_only) = true];
    // By default secrets are required.
    bool   optional                      = 5;
    string experimental_mount_as_env_var = 6;
}

message GenerateSpecification {
    string unique_id         = 1;  // If not set, will default to the package name of the caller.
    int32  random_byte_count = 2;
    Format format            = 3;

    enum Format {
        FORMAT_UNKNOWN = 0;  // Defaults to base64.
        FORMAT_BASE64  = 1;
        FORMAT_BASE32  = 2;
    }
}

message SecretDevMap {
    repeated Configure configure = 1;

    message Configure {
        string              package_name = 1;
        repeated SecretSpec secret       = 2;
    }

    message SecretSpec {
        string name      = 1;
        string from_path = 2;
        string value     = 3;
        // Runtime-specific specification. E.g. in Kubernetes would be actual secret name stored in Kubernetes.
        string resource_name = 4;
    }
}

message Value {
    string name = 1;
    string path = 2;
}
